--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -181,7 +181,7 @@ HW1, Quiz 2 online<br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top"><span
- style="font-weight: bold;">Feb
+ style="text-decoration: line-through;">Feb
 19</span><br>
       <div style="text-align: center;">Work day, go to BCAS 241<br>
       </div>
@@ -191,8 +191,9 @@ HW1, Quiz 2 online<br>
       <div style="text-align: center; font-style: italic;">President's
 Day observed&nbsp;</div>
       </td>
-      <td style="background-color: rgb(204, 51, 204);" valign="top">Feb
-21<br>
+      <td style="background-color: rgb(204, 51, 204);" valign="top"><span
+ style="font-weight: bold;">Feb
+21</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
