--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -144,9 +144,7 @@ P1, P2 </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 15<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P2 (from slide 11)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures P2, P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 16<br>
@@ -165,7 +163,11 @@ Day observed&nbsp;</div>
 21<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 22</td>
+ valign="top">Feb 22<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P3 (from slide 24)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 23<br>
       </td>
