--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -30,7 +30,8 @@ AND PROGRAMS <br>
 &nbsp;&nbsp; Lab 2 -<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
 &nbsp;&nbsp; Due April 4<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="../labs/lab 2 pthreads and sems.pdf" target="_top">Description</a>.<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
 &nbsp;&nbsp; Due May 3<br>
