--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -164,9 +164,7 @@ Day observed&nbsp;</div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 22<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P3 (from slide 24)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P3 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 23<br>
@@ -177,7 +175,11 @@ P3 (from slide 24)</span><br>
 26<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 27</td>
+ valign="top">Feb 27<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P3 (from slide 40)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 28</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
@@ -371,6 +373,7 @@ Program 3</span><br>
       <div
  style="text-align: center; background-color: rgb(51, 102, 255);">Final
 Exam, 12:15 PM<br>
+(Lecs. P3, ?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
