--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -176,8 +176,7 @@ Day observed&nbsp;</div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 27<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P3 (from slide 40)</span><br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Review<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
@@ -200,6 +199,9 @@ Last withdraw day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 5<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P3 (from slide 40)</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Program 1</span><br>
       </div>
