--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -192,7 +192,7 @@ HW1, Quiz 2 online<br>
 Day observed&nbsp;</div>
       </td>
       <td style="background-color: rgb(204, 51, 204);" valign="top"><span
- style="font-weight: bold;">Feb
+ style="text-decoration: line-through;">Feb
 21</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
@@ -207,19 +207,19 @@ Day observed&nbsp;</div>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-26<br>
-      <div style="text-align: center;">Embarassingly Parallel Examples
-(cont.)<br>
-      </div>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="text-decoration: line-through;">Feb
+26</span><br>
       <div style="text-align: center;">Catch-up and Midterm Review<br>
+Monte Carlo Methods<br>
       <span style="font-style: italic;">Due</span>: Labs 2, 3 online<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 27</td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-28<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="text-decoration: line-through;">Feb
+28</span><br>
       <div style="text-align: center;">Midterm Exam<br>
       </div>
       </td>
@@ -231,8 +231,9 @@ Day observed&nbsp;</div>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
-4<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="font-weight: bold;">Mar
+4</span><br>
       <div style="text-align: center;">Performance Considerations
 Overview<br>
       </div>
@@ -263,7 +264,8 @@ Last withdraw day</span><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 11<br>
-      <div style="text-align: center;">Monte Carlo Methods<br>
+      <div style="text-align: center;">Embarassingly Parallel Examples
+(cont.)<br>
       <span style="font-style: italic;">Due</span>: Lab 4, Quiz 3
 online; Project proposal<br>
       </div>
