--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -199,11 +199,9 @@ Last withdraw day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 5<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P3 (from slide 40)</span><br>
-      </div>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Program 1</span><br>
+      <div style="text-align: center;">Lecture P3 (cont.) </div>
+      <div style="text-align: center;">Due:
+Program 1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
@@ -211,8 +209,7 @@ Program 1</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 7<br>
-      <div style="text-align: center;"><br>
-      </div>
+      <div style="text-align: center;">Lecture P3 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 8<br>
@@ -224,6 +221,9 @@ Program 1</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 12<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P4 (from start)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 13<br>
@@ -243,8 +243,20 @@ Program 1</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 20<br>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 21<br>
+      <td
+ style="vertical-align: top; background-color: rgb(102, 255, 255);"><span
+ style="color: rgb(0, 0, 0);">Mar 21</span><br
+ style="color: rgb(0, 0, 0);">
+      <div
+ style="text-align: center; background-color: rgb(102, 255, 255);"><span
+ style="color: rgb(0, 0, 0);">Online
+videos: </span><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part1.mov">vid1</a><span
+ style="color: rgb(0, 0, 0);">, </span><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part3.mov">vid2</a><span
+ style="color: rgb(0, 0, 0);">, </span><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part4.mov">vid3</a><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 22<br>
@@ -400,3 +412,4 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
+
