--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -232,7 +232,7 @@ Monte Carlo Methods<br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top"><span
- style="font-weight: bold;">Mar
+ style="text-decoration: line-through;">Mar
 4</span><br>
       <div style="text-align: center;">Performance Considerations
 Overview<br>
@@ -244,8 +244,9 @@ Last withdraw day</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 5<br>
       </td>
-      <td style="background-color: rgb(204, 51, 204);" valign="top">Mar
-6<br>
+      <td style="background-color: rgb(204, 51, 204);" valign="top"><span
+ style="text-decoration: line-through;">Mar
+6</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
@@ -262,8 +263,12 @@ Last withdraw day</span><br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
-11<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="font-weight: bold;">Mar
+11</span><br>
+      <div style="text-align: center;">Performance Considerations
+Overview (cont.)<br>
+      </div>
       <div style="text-align: center;">Embarassingly Parallel Examples
 (cont.)<br>
       <span style="font-style: italic;">Due</span>: Lab 4, Quiz 3
