--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -8,7 +8,7 @@
   <title>TENTATIVE SCHEDULE</title>
 </head>
 <body style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
- alink="#9999ff" link="#66ffff" vlink="#ff99ff">
+ alink="#9999ff" link="#3366ff" vlink="#ff99ff">
 <center style="color: rgb(255, 255, 255);">
 <h1>TENTATIVE SCHEDULE</h1>
 </center>
@@ -183,7 +183,8 @@ Day observed&nbsp;</div>
 28</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 29<br>
-      <div style="text-align: center;">Midterm Exam (Unit O, P1, P2)<br>
+      <div style="text-align: center;">Midterm Exam (Unit O; Lecs. P1,
+P2)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
@@ -221,15 +222,15 @@ Program 1<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 12<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P4 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 13<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 14&nbsp;</td>
+ valign="top">Mar 14 <br>
+      <div style="text-align: center;">Lecture P4 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 15<br>
       </td>
@@ -239,6 +240,9 @@ P4 (from start)</span><br>
  valign="top">Mar 18 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P5 (from start)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 20<br>
@@ -387,7 +391,7 @@ Program 3</span><br>
       <div
  style="text-align: center; background-color: rgb(51, 102, 255);">Final
 Exam, 12:15 PM<br>
-(Lecs. P3, ?)<br>
+(Lecs. P3, P4, P5; ?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
@@ -412,4 +416,3 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
-
