--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -264,7 +264,7 @@ Last withdraw day</span><br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top"><span
- style="font-weight: bold;">Mar
+ style="text-decoration: line-through;">Mar
 11</span><br>
       <div style="text-align: center;">Performance Considerations
 Overview (cont.)<br>
@@ -278,8 +278,9 @@ online; Project proposal<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 12<br>
       </td>
-      <td style="background-color: rgb(204, 51, 204);" valign="top">Mar
-13<br>
+      <td style="background-color: rgb(204, 51, 204);" valign="top"><span
+ style="text-decoration: line-through;">Mar
+13</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
@@ -294,8 +295,10 @@ online; Project proposal<br>
     </tr>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 18<br>
+ valign="top"><span style="font-weight: bold;">Mar 18</span><br>
       <div style="text-align: center;">Review and Catch-Up<br>
+Parallel Computation Patterns
+Overview<br>
       <span style="font-style: italic;">Due</span>: HW2, HW3, Quiz 4
 online<br>
       </div>
@@ -357,7 +360,7 @@ Break</span><br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 1<br>
       <div style="text-align: center;">Parallel Computation Patterns
-Overview<br>
+Overview (cont.)<br>
       <span style="font-style: italic;"></span><br>
       </div>
       </td>
@@ -430,10 +433,11 @@ Quiz 7 online<br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
+      <td style="background-color: rgb(51, 0, 51);" valign="top">Apr
 22<br>
-      <div style="text-align: center;">Work/study day<br>
-      <span style="font-style: italic;">Due</span>: Project report<br>
+      <div style="text-align: center; background-color: rgb(51, 0, 51);">Student
+Talks<br>
+      <span style="font-style: italic;"></span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -462,6 +466,7 @@ Talks<br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">May
 1<br>
       <div style="text-align: center;">Catch-Up and Final Exam Review<br>
+      <span style="font-style: italic;">Due</span>: Project report<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -501,21 +506,46 @@ var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
 document.write("<br>Only " + diffDays + " days left until end of spring term (5/10/2024).");
 </script><br>
 </span><span style="font-weight: bold;"><br>
-GROUP PROJECTS</span><br>
+GROUP PROJECTS<br>
+</span><br>
+P. Desam, <span style="font-style: italic;">Splitwise calculator</span><br>
+V. Duknam, <span style="font-style: italic;">Bubble Sort and Merge Sort<br>
+</span>J. Geither, <span style="font-style: italic;">Game of Life</span><br>
+J. Goodin and K. Rossi, <span style="font-style: italic;">Random
+Forest Algorithm<br>
+</span>S. Govindaraju and S. Meruga, <span style="font-style: italic;">Super
+Resolution Using Interpolation<br>
+</span>B. Jacobsen, <span style="font-style: italic;">Bucket sort</span><br>
+N. Katukojwala and S. Kurella, <span style="font-style: italic;">Breadth-First
+Search<br>
+</span>S. Mattaparty and C. Nemalidinne, <span
+ style="font-style: italic;">Dijkstra's
+algorithm<br>
+</span>S. Narra and B. Zhang, <span style="font-style: italic;">Image
+Processing and Video Algorithms<br>
+</span>S. Nenavath, <span style="font-style: italic;">Fast Fourier
+Transform</span><span style="font-style: italic;"></span><span
+ style="font-style: italic;"></span><br>
+S. Patel, <span style="font-style: italic;">Quicksort</span><br>
+<span style="font-style: italic;"></span><span
+ style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
+Monday April 22<br>
+1.<br>
+2.<br>
+3.<br>
+4.<br>
 <br>
 Wednesday April 24<br>
 1.<br>
 2.<br>
 3.<br>
 4.<br>
-5.<br>
 <br>
 Monday April 29<br>
 1.<br>
 2.<br>
 3.<br>
-4.<br>
-5.<span style="font-style: italic;"><br>
+4<span style="font-style: italic;"><br>
 <br>
 <br>
 </span>
