--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -240,9 +240,7 @@ Program 1<br>
  valign="top">Mar 18 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 19<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P5 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 20<br>
@@ -306,6 +304,9 @@ Break</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P5 (from slide 22)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 3<br>
