--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -295,10 +295,8 @@ online; Project proposal<br>
     </tr>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top"><span style="font-weight: bold;">Mar 18</span><br>
+ valign="top"><span style="text-decoration: line-through;">Mar 18</span><br>
       <div style="text-align: center;">Review and Catch-Up<br>
-Parallel Computation Patterns
-Overview<br>
       <span style="font-style: italic;">Due</span>: HW2, HW3, Quiz 4
 online<br>
       </div>
@@ -307,7 +305,7 @@ online<br>
  valign="top">Mar 19<br>
       </td>
       <td style="background-color: rgb(204, 51, 204);" bgcolor="#c0c0c0"
- valign="top">Mar 20<br>
+ valign="top"><span style="text-decoration: line-through;">Mar 20</span><br>
       <div
  style="text-align: center; background-color: rgb(204, 51, 204);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
@@ -357,10 +355,11 @@ Break</span><br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-1<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="font-weight: bold;">Apr
+1</span><br>
       <div style="text-align: center;">Parallel Computation Patterns
-Overview (cont.)<br>
+Overview<br>
       <span style="font-style: italic;"></span><br>
       </div>
       </td>
