--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -304,8 +304,7 @@ Break</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 2<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P5 (from slide 22)</span><br>
+      <div style="text-align: center;">Lecture P5 (cont.)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
@@ -313,9 +312,8 @@ P5 (from slide 22)</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due
-Program 2</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lectures
+P5, D1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 5<br>
@@ -329,7 +327,14 @@ day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 9&nbsp;</td>
+ valign="top">Apr 9 <br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+D1 (from slide 24)</span><br>
+      </div>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Program 2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 10<br>
       </td>
@@ -417,3 +422,4 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
+
