--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -356,7 +356,7 @@ Break</span><br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top"><span
- style="font-weight: bold;">Apr
+ style="text-decoration: line-through;">Apr
 1</span><br>
       <div style="text-align: center;">Parallel Computation Patterns
 Overview<br>
@@ -366,8 +366,9 @@ Overview<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 2<br>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-3<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="text-decoration: line-through;">Apr
+3</span><br>
       <div style="text-align: center;">Parallel Computation Patterns
 Overview (cont.)<br>
 Parallel Reduction Case Study<br>
@@ -394,8 +395,9 @@ day</span><br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 9&nbsp;</td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-10<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="font-weight: bold;">Apr
+10</span><br>
       <div style="text-align: center;">More Examples (cont.)<br>
       <span style="font-style: italic;">Due</span>: Quiz 6 online<br>
       </div>
