--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -383,8 +383,9 @@ More Examples<br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(204, 51, 204);" valign="top">Apr
-8<br>
+      <td style="background-color: rgb(204, 51, 204);" valign="top"><span
+ style="text-decoration: line-through;">Apr
+8</span><br>
       <div style="text-align: center;"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online Unit
 9 (Module 7)</a><br>
@@ -396,9 +397,10 @@ day</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 9&nbsp;</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top"><span
- style="font-weight: bold;">Apr
+ style="text-decoration: line-through;">Apr
 10</span><br>
       <div style="text-align: center;">More Examples (cont.)<br>
+MPI and CUDA<br>
       <span style="font-style: italic;">Due</span>: Quiz 6 online<br>
       </div>
       </td>
@@ -421,7 +423,7 @@ day</span><br>
  valign="top">Apr 16&nbsp;</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 17<br>
-      <div style="text-align: center;">MPI and CUDA<br>
+      <div style="text-align: center;">MPI and CUDA (cont.)<br>
 Conclusions and Review<br>
       <span style="font-style: italic;">Due</span>: Labs 5, 6 online;
 Quiz 7 online<br>
@@ -508,47 +510,37 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script><br>
 </span><span style="font-weight: bold;"><br>
 GROUP PROJECTS<br>
-</span><br>
-P. Desam, <span style="font-style: italic;">Splitwise calculator</span><br>
-V. Duknam, <span style="font-style: italic;">Bubble Sort and Merge Sort<br>
-</span>J. Geither, <span style="font-style: italic;">Game of Life</span><br>
-J. Goodin and K. Rossi, <span style="font-style: italic;">Random
-Forest Algorithm<br>
-</span>S. Govindaraju and S. Meruga, <span style="font-style: italic;">Super
-Resolution Using Interpolation<br>
-</span>B. Jacobsen, <span style="font-style: italic;">Bucket sort</span><br>
-N. Katukojwala and S. Kurella, <span style="font-style: italic;">Breadth-First
-Search<br>
-</span>S. Mattaparty and C. Nemalidinne, <span
- style="font-style: italic;">Dijkstra's
-algorithm<br>
-</span>S. Narra and B. Zhang, <span style="font-style: italic;">Image
-Processing and Video Algorithms<br>
-</span>S. Nenavath, <span style="font-style: italic;">Fast Fourier
-Transform</span><span style="font-style: italic;"></span><span
+</span><span style="font-style: italic;"></span><span
  style="font-style: italic;"></span><br>
-S. Patel, <span style="font-style: italic;">Quicksort</span><br>
-<span style="font-style: italic;"></span><span
- style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
 Monday April 22<br>
-1.<br>
-2.<br>
-3.<br>
-4.<br>
+1. P. Desam, <span style="font-style: italic;">Splitwise calculator</span><br>
+2. S. Mattaparty and C. Nemalidinne, <span style="font-style: italic;">Dijkstra's
+algorithm</span><br>
+3. S. Patel, <span style="font-style: italic;">Quicksort</span><br>
 <br>
 Wednesday April 24<br>
-1.<br>
-2.<br>
-3.<br>
-4.<br>
+1. J. Goodin and K. Rossi, <span style="font-style: italic;">Random
+Forest Algorithm</span><br>
+2. S. Govindaraju and S. Meruga, <span style="font-style: italic;">Super
+Resolution Using Interpolation</span><br>
+3. N. Katukojwala and S. Kurella, <span style="font-style: italic;">Breadth-First
+Search</span><br>
+4. S. Narra and B. Zhang, <span style="font-style: italic;">Image
+Processing and Video Algorithms</span><br>
 <br>
 Monday April 29<br>
-1.<br>
-2.<br>
-3.<br>
-4<span style="font-style: italic;"><br>
+1. V. Duknam, <span style="font-style: italic;">Bubble Sort and Merge
+Sort</span><br>
+2. J. Geither, <span style="font-style: italic;">Game of Life</span><br>
+3. B. Jacobsen, <span style="font-style: italic;">Bucket sort</span><br>
+4. S. Nenavath, <span style="font-style: italic;">Fast Fourier
+Transform</span><span style="font-style: italic;"></span><span
+ style="font-style: italic;"></span><br>
+<span style="font-style: italic;"></span><span
+ style="font-style: italic;"><br>
 <br>
 <br>
 </span>
 </body>
 </html>
+
