--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -328,9 +328,7 @@ day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 9 <br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-D1 (from slide 24)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures D1, D2 </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Program 2</span><br>
       </div>
@@ -339,7 +337,9 @@ Program 2</span><br>
 10<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 11&nbsp;</td>
+ valign="top">Apr 11 <br>
+      <div style="text-align: center;">Lectures D2, F1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 12<br>
       </td>
@@ -348,7 +348,11 @@ Program 2</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 16&nbsp;</td>
+ valign="top">Apr 16 <br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+F1 (from slide 26)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 17</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
@@ -397,7 +401,7 @@ Program 3</span><br>
       <div
  style="text-align: center; background-color: rgb(51, 102, 255);">Final
 Exam, 12:15 PM<br>
-(Lecs. P3, P4, P5; ?)<br>
+(Lecs. P3, P4, P5; Units D, F, ?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
@@ -422,4 +426,3 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
-
