--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -35,7 +35,10 @@ AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
 &nbsp;&nbsp; Due May 3<br>
-&nbsp;&nbsp; coming soon.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/lab 3 simple file system.pdf" target="_top">Description</a>,
+	<a href="../labs/lab3/floppya.img">disk image</a>,<br>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/filesys.c">seed
+	file</a>.<br>
 </font></b><b><br>
 </b>
 </body>
