--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -349,14 +349,15 @@ Program 2</span><br>
 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 16 <br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-F1 (from slide 26)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures F1, F2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 17</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 18&nbsp;</td>
+ valign="top">Apr 18 <br>
+      <div style="text-align: center;">Lectures F2, M1<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 19<br>
       </td>
@@ -365,7 +366,11 @@ F1 (from slide 26)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 22</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 23&nbsp;</td>
+ valign="top">Apr 23 <br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+M1 (from slide 14), M2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 24</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
