--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -367,14 +367,15 @@ Program 2</span><br>
 22</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 23 <br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-M1 (from slide 14), M2</span><br>
-      </div>
+      <div style="text-align: center;">Lectures M1, M2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 24</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 25</td>
+ valign="top">Apr 25<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+M2 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 26</td>
     </tr>
@@ -384,12 +385,16 @@ M1 (from slide 14), M2</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 30<br>
+      <div style="text-align: center;">Lectures M2, X1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May
 1<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">May 2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+X1 (from slide 9), X5</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Program 3</span><br>
       </div>
@@ -406,7 +411,7 @@ Program 3</span><br>
       <div
  style="text-align: center; background-color: rgb(51, 102, 255);">Final
 Exam, 12:15 PM<br>
-(Lecs. P3, P4, P5; Units D, F, ?)<br>
+(Lecs. P3, P4, P5; Units D, F, M)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
@@ -431,3 +436,4 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
+
