--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,8 +28,7 @@
 </h2>
 <ul>
   <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Spring '24)</a></li>
-  <li><a href="cs677/index.html">CPSC 677 - Parallel Processing (Spring '24)</a><br>
-  </li>
+  <li>CPSC 589 - Topics in CPSC: Computing Concepts for Educators (Summer 5W1 '24)</li>
 </ul>
 <h2>Previous Courses</h2>
 <ul>
@@ -53,6 +52,7 @@ Science<br>
   <li>3460:635 - Advanced Algorithms</li>
   <li>3460:641 - Optimizations for Parallel
 Compilers<br></li>
+  <li>CPSC 677 - Parallel Processing<br></li>
 </ul>
 <h2>Obsolete Courses</h2>
 <ul>
