--- a/teaching/index.html
+++ b/teaching/index.html
@@ -27,7 +27,7 @@
 <h2>Teaching Schedule<br>
 </h2>
 <ul>
-  <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Spring '24)</a></li>
+  <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Fall '24 and Spring '25)</a></li>
   <li>CPSC 589 - Topics in CPSC: Computing Concepts for Educators (Summer 5W1 '24)</li>
 </ul>
 <h2>Previous Courses</h2>
