--- a/teaching/cs426new/index.html
+++ b/teaching/cs426new/index.html
@@ -94,7 +94,7 @@ currently configured not to display inline frames. </iframe></p>
  face="Verdana" size="2">INSTRUCTOR</font></b></div>
 <div id="layer19"
  style="left: 4px; top: 120px; width: 68px; height: 43px; position: absolute; z-index: 9;"><a
- href="textFiles/sis.htm"><img alt="gold off"
+ href="textFiles/sis.htm" target="I1"><img alt="gold off"
  onmouseover="this.src='homePageGraphics/all_on.png'"
  onmouseout="this.src='homePageGraphics/gold_off.png'"
  src="homePageGraphics/gold_off.png"
