--- a/teaching/cs426new/index.html
+++ b/teaching/cs426new/index.html
@@ -37,7 +37,7 @@ or is currently configured not to display inline frames. </iframe></div>
  face="Verdana" size="2">BRIGHTSPACE</font></b></div>
 <div id="layer20"
  style="left: 4px; top: 127px; width: 69px; height: 43px; position: absolute; z-index: 4;"><a
- href="textFiles/calendar.html"><img alt="orange off"
+ href="textFiles/calendar.htm"><img alt="orange off"
  onmouseover="this.src='homePageGraphics/all_on.png'"
  onmouseout="this.src='homePageGraphics/contact_off.png'"
  src="homePageGraphics/contact_off.png"
