--- a/teaching/cs426new/textFiles/sis.htm
+++ b/teaching/cs426new/textFiles/sis.htm
@@ -20,12 +20,12 @@ font-family:Verdana
 <b><font color="#868cde" face="Verdana" size="2">CPSC 4/526<br>
 STUDENT INFORMATION SHEET</font></b><br>
 <ul>
-  <li><a href="sis.pdf"><b><font color="#868cde" face="Verdana" size="2">In-class
+  <li><a href="sis.pdf" target="_top"><b><font color="#868cde" face="Verdana" size="2">In-class
 Handout</font></b></a></li>
-  <li><a href="Faculty%20Senate%20Chronicle%20November%203%202022.pdf"><b><font
+  <li><a href="Faculty%20Senate%20Chronicle%20November%203%202022.pdf" target="_top"><b><font
  color="#868cde" face="Verdana" size="2">Diversity Statement</font></b></a></li>
   <li><a
- href="https://www.uakron.edu/oaa/faculty-affairs/what-students-need-to-know"><b><font
+ href="https://www.uakron.edu/oaa/faculty-affairs/what-students-need-to-know" target="_top"><b><font
  color="#868cde" face="Verdana" size="2">OAA Student Info</font></b></a></li>
 </ul>
 <b></b>
