--- a/teaching/cs426new/textFiles/calendar.htm
+++ b/teaching/cs426new/textFiles/calendar.htm
@@ -11,7 +11,7 @@
  alink="#66ffff" link="#66ffff" vlink="#ff99ff">
 <center>
 <h1>TENTATIVE SCHEDULE</h1>
-<h1>CPSC:4/526, TR 9:15 - 10:30, BCAS 143, FALL 2024</h1>
+<h1>CPSC:4/526, TR 9:15 - 10:30, Kolbe 213, FALL 2024</h1>
 </center>
 <table nosave="" border="1" width="100%">
   <tbody>
