--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -42,9 +42,7 @@
       <td style="background-color: rgb(0, 0, 0);" valign="top">Aug 28 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Aug 29<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-O1 (from slide 30), O2</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O1, O2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Aug 30</td>
@@ -57,10 +55,15 @@ Sunday: Last add day<br>
       </center>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 3</td>
+ valign="top">Sep 3<br>
+      <div style="text-align: center;">Lectures O2, O3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 4 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 5</td>
+ valign="top">Sep 5<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lectures
+O3, O4 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sep 6</td>
     </tr>
@@ -71,20 +74,31 @@ Last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 10</td>
+ valign="top">Sep 10<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lectures
+O4, O5 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 11 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 12</td>
+ valign="top">Sep 12<br>
+      <div style="text-align: center;">Lectures O5, P1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sep 13</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 16 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 17</td>
+ valign="top">Sep 17<br>
+      <div style="text-align: center;">Lecture P1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 18 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 19</td>
+ valign="top">Sep 19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+P1 (from slide 54), P2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sep 20</td>
     </tr>
@@ -115,7 +129,8 @@ Last drop day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 9 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 10<br>
-      <div style="text-align: center;">Midterm Exam<br>
+      <div style="text-align: center;">Midterm Exam (Unit O, P through
+?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -128,7 +143,11 @@ Last withdraw day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 15</td>
+ valign="top">Oct 15<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 16 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 17</td>
@@ -161,7 +180,11 @@ Last withdraw day</span><br>
  valign="top">Nov 5</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 6 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 7</td>
+ valign="top">Nov 7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 8</td>
     </tr>
@@ -212,7 +235,11 @@ Day Observed</span><br>
  valign="top">Dec 3</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec 4 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Dec 5</td>
+ valign="top">Dec 5<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 3</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Dec 6</td>
     </tr>
