--- a/teaching/cs426/textFiles/projects.htm
+++ b/teaching/cs426/textFiles/projects.htm
@@ -22,14 +22,17 @@ HOMEWORK
 AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 1 - A Simple Linux Shell<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp; <a href="../labs/lab%201%20linux%20shell.pdf"
+ target="_top">Description</a> , <a href="../labs/myshell.c"
+ target="_top">seed file</a>.<br>
+&nbsp;&nbsp; Due October 15.<br>
 <br>
 &nbsp;&nbsp; Lab 2 -<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp; Due November 7.<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp; Due December 5.<br>
 </font></b><b><br>
 </b>
 </body>
