--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -95,9 +95,8 @@ O4, O5 </div>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 18 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Sep 19<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-P1 (from slide 54), P2</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+P1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sep 20</td>
@@ -105,17 +104,27 @@ P1 (from slide 54), P2</span><br>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 23 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 24</td>
+ valign="top">Sep 24<br>
+      <div style="text-align: center;">Lectures P1, P2<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 25 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 26</td>
+ valign="top">Sep 26<br>
+      <div style="text-align: center;">Lecture
+P3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sep 27</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 30 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 1</td>
+ valign="top">Oct 1<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P3 (from slide 31)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 2 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 3</td>
@@ -129,8 +138,8 @@ P1 (from slide 54), P2</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 9 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 10<br>
-      <div style="text-align: center;">Midterm Exam (Unit O, P through
-?)<br>
+      <div style="text-align: center;">Midterm Exam (Unit O; Lectures
+P1, P2, P3)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -144,8 +153,8 @@ Last withdraw day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 15<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 1</span><br>
+      <div style="text-align: center;">Due:
+Lab 1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 16 </td>
@@ -249,6 +258,7 @@ Lab 3</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Dec 10<br>
       <div style="text-align: center;">Final Exam, 12:15 PM<br>
+(Lectures P4, P5; Units D, F, M)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec 11 </td>
