--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -121,20 +121,26 @@ P3 </div>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 30 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 1<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P3 (from slide 31)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture
+P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 2 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 3</td>
+ valign="top">Oct 3<br>
+      <div style="text-align: center;">Lecture
+P3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 4</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 7 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 8</td>
+ valign="top">Oct 8<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P4 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 9 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 10<br>
@@ -158,8 +164,20 @@ Lab 1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 16 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 17</td>
+      <td style="background-color: rgb(255, 153, 255);"
+ bgcolor="#c0c0c0" valign="top"><span style="color: rgb(0, 0, 0);">Oct
+17</span><br>
+      <div
+ style="text-align: center; background-color: rgb(255, 153, 255);"><span
+ style="color: rgb(0, 0, 0);">Online
+videos: </span><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part1.mov">vid1</a><span
+ style="color: rgb(0, 0, 0);">, </span><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part3.mov">vid2</a><span
+ style="color: rgb(0, 0, 0);">, </span><a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part4.mov">vid3</a><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 18</td>
     </tr>
